[package]
name = "wasm-tar"
version = "0.1.0"
authors = ["Matthieu Pizenberg <matthieu.pizenberg@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
tar = "0.4"

[dependencies.web-sys]
version = "0.3.4"
features = [
  # 'ImageData',
  # 'CanvasRenderingContext2d',
]

[profile.release]
# Tell `rustc` to optimize for small code size.
# opt-level = "s"
opt-level = 3
lto = true
